@@ -77,5 +77,5 @@ srcMLOutput::PROCESS_PTR srcMLOutput::process_table[] = {
   &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken,
   &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken,
   &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken,
-  &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken, 
+  &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken, &srcMLOutput::processToken,
 };
